--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-preset-flow": "^6.23.0",
     "chai": "^4.1.2",
     "eslint": "^5.0.1",
-    "eslint-plugin-github": "1.0.0",
+    "eslint-plugin-github": "^1.1.3",
     "flow-bin": "^0.75.0",
     "karma": "^2.0.0",
     "karma-chai": "^0.1.0",
