--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "clean": "rm -rf dist",
     "lint": "eslint index.js test/ && flow check",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
-    "build-umd": "BABEL_ENV=umd babel index.js -o dist/index.umd.js",
-    "build-esm": "BABEL_ENV=esm babel index.js -o dist/index.esm.js",
+    "build-umd": "BABEL_ENV=umd babel index.js -o dist/index.umd.js && cp index.js.flow dist/index.umd.js.flow",
+    "build-esm": "BABEL_ENV=esm babel index.js -o dist/index.esm.js && cp index.js.flow dist/index.esm.js.flow",
     "build": "npm run build-umd && npm run build-esm",
     "pretest": "npm run build",
     "test": "karma start test/karma.config.js",
