--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@github/details-menu-element",
   "version": "0.1.0",
   "description": "A menu opened with a <details> button.",
-  "main": "dist/index-umd.js",
+  "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
   "license": "MIT",
   "repository": "github/details-menu-element",
