Update for modern browsers
- adopt babel-preset-github (drop IE 11)
- stop transforming custom elements classes
- update eslint-plugin-github

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,25 @@
 {
   "extends": [
+    "plugin:github/browser",
     "plugin:github/es6",
-    "plugin:github/browser"
+    "plugin:github/flow"
   ],
-  "parser": "babel-eslint"
+  "overrides": [
+    {
+      "files": "test/**/*.js",
+      "rules": {
+        "flowtype/require-valid-file-annotation": "off"
+      }
+    },
+    {
+      "files": "test/**/*.js",
+      "excludedFiles": "test/karma.config.js",
+      "env": {
+        "mocha": true
+      },
+      "globals": {
+        "assert": true
+      }
+    }
+  ]
 }
