--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint index.js test/ && flow check",
+    "lint": "eslint . && flow check",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
     "build-umd": "BABEL_ENV=umd babel index.js -o dist/index.umd.js && cp index.js.flow dist/index.umd.js.flow",
     "build-esm": "BABEL_ENV=esm babel index.js -o dist/index.esm.js && cp index.js.flow dist/index.esm.js.flow",
@@ -28,14 +28,12 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
+    "babel-preset-github": "^2.1.1",
     "chai": "^4.2.0",
     "eslint": "^5.12.0",
-    "eslint-plugin-github": "^1.7.4",
+    "eslint-plugin-github": "^1.9.0",
     "flow-bin": "^0.90.0",
-    "karma": "^3.1.4",
+    "karma": "^4.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
