--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "eslint . && flow check",
+    "lint": "github-lint",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
     "build-umd": "BABEL_ENV=umd babel index.js -o dist/index.umd.js && cp index.js.flow dist/index.umd.js.flow",
     "build-esm": "BABEL_ENV=esm babel index.js -o dist/index.esm.js && cp index.js.flow dist/index.esm.js.flow",
@@ -28,7 +28,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
-    "babel-preset-github": "^2.1.1",
+    "babel-preset-github": "^2.1.2",
     "chai": "^4.2.0",
     "eslint": "^5.12.0",
     "eslint-plugin-github": "^1.9.0",
@@ -39,5 +39,8 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^5.0.5"
-  }
+  },
+  "eslintIgnore": [
+    "dist/"
+  ]
 }
