--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,10 @@
 {
   "extends": [
     "plugin:github/browser",
-    "plugin:github/es6",
-    "plugin:github/flow"
+    "plugin:github/recommended",
+    "plugin:github/typescript"
   ],
   "overrides": [
-    {
-      "files": "test/**/*.js",
-      "rules": {
-        "flowtype/require-valid-file-annotation": "off"
-      }
-    },
     {
       "files": "test/**/*.js",
       "excludedFiles": "test/karma.config.js",
