--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@github/details-menu-element",
   "version": "1.0.8",
   "description": "A menu opened with a <details> button.",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "type": "module",
   "types": "index.d.ts",
   "license": "MIT",
   "repository": "github/details-menu-element",
@@ -15,33 +16,29 @@
     "details",
     "menu"
   ],
+  "prettier": "@github/prettier-config",
   "scripts": {
     "clean": "rm -rf dist",
-    "lint": "github-lint",
+    "lint": "eslint . --ext .js,.ts && tsc --noEmit",
     "prebuild": "npm run clean && npm run lint && mkdir dist",
-    "build-umd": "BABEL_ENV=umd babel index.js -o dist/index.umd.js && cp index.js.flow dist/index.umd.js.flow",
-    "build-esm": "BABEL_ENV=esm babel index.js -o dist/index.esm.js && cp index.js.flow dist/index.esm.js.flow",
-    "build": "npm run build-umd && npm run build-esm",
+    "build": "tsc",
     "pretest": "npm run build",
-    "test": "karma start test/karma.config.js",
+    "test": "karma start test/karma.config.cjs",
     "prepublishOnly": "npm run build",
     "postpublish": "npm publish --ignore-scripts --@github:registry='https://npm.pkg.github.com'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-transform-modules-umd": "^7.2.0",
-    "babel-preset-github": "^3.2.1",
+    "@github/prettier-config": "0.0.4",
     "chai": "^4.2.0",
     "eslint": "^6.4.0",
-    "eslint-plugin-github": "^3.1.2",
-    "flow-bin": "^0.107.0",
-    "karma": "^4.3.0",
+    "eslint-plugin-github": "^4.0.0",
+    "karma": "^5.0.9",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "mocha": "^6.2.0"
+    "mocha": "^7.2.0",
+    "typescript": "^3.9.3"
   },
   "eslintIgnore": [
     "dist/"
