--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "type": "module",
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "repository": "github/details-menu-element",
   "files": [
-    "dist",
-    "index.d.ts"
+    "dist"
   ],
   "keywords": [
     "details",
